@@ -653,7 +653,7 @@ fast/dom/Window/timer-resume-on-navigation-back.html
 loader/go-back-to-different-window-size.html
 
 # Missing layoutTestController.findString() http://webkit.org/b/50236
-#editing/text-iterator/findString.html
+editing/text-iterator/findString.html
 
 # Missing layoutTestController.setAlwaysAcceptCookies()
 http/tests/xmlhttprequest/access-control-basic-allow-preflight-cache-timeout.html
@@ -2504,6 +2504,9 @@ fast/events/remove-target-in-mouseup.html
 # https://bugs.webkit.org/show_bug.cgi?id=61322
 fast/events/selectstart-by-double-triple-clicks.html
 fast/events/selectstart-by-drag.html
+
+# LayoutTestController::setTextDirection is not implemented.
+fast/html/set-text-direction.html
 
 # JSC does not support setIsolatedWorldSecurityOrigin (http://webkit.org/b/61540)
 http/tests/security/isolatedWorld/cross-origin-xhr.html
