@@ -1,3 +1,15 @@
+2011-06-12  Sheriff Bot  <webkit.review.bot@gmail.com>
+
+        Unreviewed, rolling out r88616.
+        http://trac.webkit.org/changeset/88616
+        https://bugs.webkit.org/show_bug.cgi?id=62517
+
+        It broke editing/text-iterator/findString.html (Requested by
+        tonikitoo on #webkit).
+
+        * DumpRenderTree/qt/LayoutTestControllerQt.cpp:
+        * DumpRenderTree/qt/LayoutTestControllerQt.h:
+
 2011-06-12  Mahesh Kulkarni  <mahesh.kulkarni@nokia.com>
 
         Reviewed by Antonio Gomes.
